# worker-microservice

./: .dockerignore  .env.TEMPLATE  .gitignore  Dockerfile  README.md  configuration.py  main.py  pyproject.toml  storage.py
.github/workflows/: build-and-push-container.yml
database/: __init__.py  models.py
scripts/: init-database.ps1  run-database.ps1
worker/: configuration.py
